# poem-wizard-openapi

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
migrations/: 0001_wizards_table.sql  001_create_wizards_table.sql
src/: database_util.rs  lib.rs  main.rs  wizard.rs  wizard_api.rs  wizard_responses.rs  wizard_service.rs
