[package]
name = "poem-wizard-openapi"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "1.3.59"
poem-openapi = { version = "3.0.6", features = [ "openapi-explorer" ] }
serde = { version = "1.0", features = [ "derive" ] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
tokio = { version = "1.35.1", features = [ "full" ] }
